--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "cSpell.words": [
-        "icon",
-        "kfpedia",
-        "utareyu"
+        "mygithub",
+        "mytwitter"
     ]
 }
